--- a/report/capitulos/introduccion.tex
+++ b/report/capitulos/introduccion.tex
@@ -53,7 +53,7 @@ los planificadores, los cuales pueden proceder entonces a computar su solución.
 
 % Trabajos anteriores
 Otros autores ya han utilizado fragmentos de la lógica de segundo orden como un lenguaje de
-programación declarativo. En \cite{reiter:cwa} se describe un
+programación declarativo. En la obra de \cite{reiter:cwa} se describe un
 lenguaje de reglas y consultas a bases de datos que es un subconjunto de
 PROLOG, llamado DATALOG. A su vez, \cite{cadoli:npspec} presenta una
 extensión de este lenguaje que permite la codificación de problemas NP y
@@ -62,7 +62,7 @@ fue probado con pequeñas instancias del \textbf{problema de la mochila}
 (\textit{knapsack problem}) y el \textbf{problema del viajante}
 (\textit{traveling salesman problem}).
 
-Los autores de \cite{mitchell:npsearch} proponen, por su parte, el lenguaje de
+\cite{mitchell:npsearch} proponen, por su parte, el lenguaje de
 Extensión de Modelos (MX), que es conceptualmente muy cercano a la lógica de
 segundo orden. Este trabajo se enfoca en la descripción formal del lenguaje y
 en discutir la posibilidad de diseñar un solucionador. En esta sección, los
@@ -72,7 +72,7 @@ trabajo con la función que traduce descripciones declarativas a problemas
 de planificación, área para la cual existe una amplia variedad de solucionadores.
 
 %! Qué formato puede requerir este enfoque?
-Otro trabajo relacionado a este proyecto es \cite{cadoli:safedelay}. Los
+Otro trabajo relacionado a este proyecto es el de \cite{cadoli:safedelay}. Los
 autores presentan una manera de razonar sobre los problemas de
 decisión, intentando reformularlos para hacerlos más fáciles de resolver. Se
 utilizan sistemas especializados para la modelación de restricciones y
