--- a/report/capitulos/capitulo2.tex
+++ b/report/capitulos/capitulo2.tex
@@ -12,7 +12,7 @@ Primero se presenta una perspectiva a alto nivel de lo que de
 \begin{figure}[h!]
 \centering
 \includegraphics[width=\textwidth]{figuras/esquema_herramienta.pdf}
-\caption{Posible estado para un problema en \textit{mundo de bloques}.}
+\caption{Esquema de operación de la herramienta}
 \label{esquema_herramienta}
 \end{figure}
 
