--- a/report/capitulos/capitulo5.tex
+++ b/report/capitulos/capitulo5.tex
@@ -94,8 +94,8 @@ uuf75         &         1/40 &      0 &      1 &   1,746.4 \\ % 0.0
 Total         &  1,614/1,920 &    706 &    908 &     180.9 \\ % a rellenar al final
 \end{tabularx}}
 \captionsetup{font=footnotesize}
-\caption{Resultados para M.
-Para cada tipo de problema, la tabla muestra el número de instancias resueltas
+\caption[Resultados de M]{Resultados de M.
+En cada tipo de problema, la tabla muestra el número de instancias resueltas
 ($N^*$), el número total de instancias ($N$), el número total de instancias que
 satisfacen la propiedad (\#pos.) y que no la satisfacen (\#neg.), y el tiempo
 promedio en segundos.}
