--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -238,15 +238,19 @@ Agradecimientos aquí.
 \textbf{PH} & \textbf{P}olynomial \textbf{H}ierarchy (clase de complejidad)\\
 \textbf{SAT} & boolean \textbf{SAT}isfiability\\
 \textbf{TCD} & \textbf{T}eoría de \textbf{C}omplejidad \textbf{D}escriptiva\\
-\textbf{Fun} & función total\\
-\textbf{Inj} & función total inyectiva\\
-\textbf{PFun} & función parcial\\
-\textbf{PInj} & función parcial inyectiva\\
+&\\
+\hline
+&\\
+\textbf{Fun} & abreviación de función total\\
+\textbf{Inj} & abreviación de función total inyectiva\\
+\textbf{PFun} & abreviación de función parcial\\
+\textbf{PInj} & abreviación de función parcial inyectiva\\
 &\\
 \hline
 &\\
 $\iff$ & doble implicación, si y sólo si\\
-$\Rightarrow$ & implicación lógica
+$\Rightarrow$ & implicación lógica\\
+$[u:=v]$ & sustitución textual de $u$ por $v$
 }
 
 %% ----------------------------------------------------------------
