--- a/report/bibliografia.bib
+++ b/report/bibliografia.bib
@@ -96,6 +96,16 @@
   year = "1999"
 }
 
+@Article{fikes:strips,
+  author = "R. Fikes and N. Nilsson",
+  title = "{STRIPS}: A new approach to the application of theorem proving to problem solving",
+  pages = "27--120",
+  volume = "1",
+  year = "1971",
+  journal = aij,
+  publisher = "Elsevier"
+}
+
 @InCollection{reiter:cwa,
   author = "R. Reiter",
   title = "On closed-world data bases",
