--- a/report/capitulos/introduccion.tex
+++ b/report/capitulos/introduccion.tex
@@ -55,7 +55,7 @@ los planificadores, los cuales pueden proceder entonces a computar su solución.
 Otros autores ya han utilizado fragmentos de la lógica de segundo orden como un lenguaje de
 programación declarativo. En la obra de \cite{reiter:cwa} se describe un
 lenguaje de reglas y consultas a bases de datos que es un subconjunto de
-PROLOG, llamado DATALOG. A su vez, \cite{cadoli:npspec} presenta una
+PROLOG, llamado DATALOG. A su vez, \cite{cadoli:npspec} presentan una
 extensión de este lenguaje que permite la codificación de problemas NP y
 se desarrolla un método para compilar los problemas a código de PROLOG, el cual
 fue probado con pequeñas instancias del \textbf{problema de la mochila}
