--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -237,6 +237,7 @@ Agradecimientos aquí.
 \textbf{PDDL} & \textbf{P}lanning \textbf{D}omain \textbf{D}efinition \textbf{L}anguage \\
 \textbf{PH} & \textbf{P}olynomial \textbf{H}ierarchy (clase de complejidad)\\
 \textbf{SAT} & boolean \textbf{SAT}isfiability\\
+\textbf{STRIPS} & \textbf{S}tanford \textbf{R}esearch \textbf{I}nstitute \textbf{P}roblem \textbf{S}olver\\
 \textbf{TCD} & \textbf{T}eoría de \textbf{C}omplejidad \textbf{D}escriptiva\\
 &\\
 \hline
