--- a/report/capitulos/capitulo5.tex
+++ b/report/capitulos/capitulo5.tex
@@ -7,16 +7,18 @@
 \section{Resultados del planificador \texttt{M}}
 \section{Resultados del planificador \texttt{num2sat}}
 
-\twocolumn
-\setlength{\columnsep}{1mm}
-prueba
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
 \begin{table}[t]
-\scalebox{.75}{
-\small
-\begin{tabularx}{1.2\columnwidth}{lllllll}
-              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+\begin{center}
+\begin{tabular}{lllllll}
+\multicolumn{5}{@{}c}{\footnotesize\textsc{Sat}: $\pwin=[n+5,n+6]$} \\
 \midrule
-\multicolumn{5}{@{}l}{\footnotesize\textsc{Sat}: $\pwin=[n+5,n+6]$} \\
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
 \midrule
 %                                                             % sample standard deviation
 uf20          &        40/40 &     40 &      0 &       1.7 \\ % 2.0
@@ -25,7 +27,24 @@ uf75          &        15/40 &     15 &      0 &     362.1 \\ % 568.6
 uuf50         &        40/40 &      0 &     40 &     548.5 \\ % 260.2
 uuf75         &         1/40 &      0 &      1 &   1,746.4 \\ % 0.0
 \midrule
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
+\end{table}
+
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lllllll}
 \multicolumn{5}{@{}l}{\footnotesize\textsc{Clique}: $\pwin=[2n+4, 3n+7]$} \\
+\midrule
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
 \midrule
 %5-3           &        40/40 &     10 &     30 &       0.0 \\ % 0.0
 %5-4           &        40/40 &      0 &     40 &       0.2 \\ % 0.5
@@ -44,8 +63,18 @@ uuf75         &         1/40 &      0 &      1 &   1,746.4 \\ % 0.0
 25-4          &        40/40 &     18 &     22 &     231.0 \\ % 236.7
 25-5          &        39/40 &     10 &     29 &     387.5 \\ % 396.6
 25-6          &        36/40 &      8 &     28 &     394.1 \\ % 321.1
-\midrule
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
+\end{table}
+
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lllllll}
 \multicolumn{5}{@{}l}{\footnotesize\textsc{DirectedHamiltonianPath}: $\pwin=[n+3,n+10]$} \\
+\midrule
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
 \midrule
 %5             &        40/40 &     12 &     28 &       0.0 \\ % 0.0
 10            &        40/40 &     15 &     25 &       1.1 \\ % 2.3
@@ -54,7 +83,18 @@ uuf75         &         1/40 &      0 &      1 &   1,746.4 \\ % 0.0
 25            &        29/40 &     20 &      9 &     202.1 \\ % 199.8
 30            &        22/40 &     20 &      2 &     629.1 \\ % 242.2
 \midrule
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
+\end{table}
+
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lllllll}
 \multicolumn{5}{@{}l}{\footnotesize\textsc{3-DimensionalMatching}: $\pwin=[3n+4,3n+6]$} \\
+\midrule
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
 \midrule
 %5             &        40/40 &     19 &     21 &       0.0 \\ % 0.0
 10            &        40/40 &     36 &      4 &       9.6 \\ % 2.8
@@ -62,7 +102,18 @@ uuf75         &         1/40 &      0 &      1 &   1,746.4 \\ % 0.0
 20            &        13/40 &     13 &      0 &   1,191.0 \\ % 42.1 (avg/std) is over 3 instances !!!
 25            &         0/40 &      0 &      0 &       --- \\ % ---
 \midrule
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
+\end{table}
+
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lllllll}
 \multicolumn{5}{@{}l}{\footnotesize\textsc{3-Colorability}: $\pwin=[2n+4, 2n+7]$} \\
+\midrule
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
 \midrule
 %5             &        40/40 &     37 &      3 &       0.0 \\ % 0.0
 10            &        40/40 &     18 &     22 &       0.1 \\ % 0.1
@@ -73,7 +124,18 @@ uuf75         &         1/40 &      0 &      1 &   1,746.4 \\ % 0.0
 40            &        40/40 &      4 &     36 &      75.1 \\ % 55.7
 50            &        40/40 &      1 &     39 &     196.7 \\ % 119.2
 \midrule
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
+\end{table}
+
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lllllll}
 \multicolumn{5}{@{}l}{\footnotesize$k$-\textsc{Colorability}: $\pwin=[2n+4,3n+6]$} \\
+\midrule
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
 \midrule
 %5-2           &        40/40 &     20 &     20 &       0.0 \\ % 0.0
 %5-3           &        40/40 &     37 &      3 &       0.0 \\ % 0.0
@@ -91,15 +153,22 @@ uuf75         &         1/40 &      0 &      1 &   1,746.4 \\ % 0.0
 25-3          &         0/40 &      0 &      0 &       --- \\ % ---
 25-4          &         0/40 &      0 &      0 &       --- \\ % ---
 \midrule
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
+\end{table}
+
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lllllll}
+              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+\midrule
 Total         &  1,614/1,920 &    706 &    908 &     180.9 \\ % a rellenar al final
-\end{tabularx}}
-\captionsetup{font=footnotesize}
-\caption[Resultados de M]{Resultados de M.
-En cada tipo de problema, la tabla muestra el número de instancias resueltas
-($N^*$), el número total de instancias ($N$), el número total de instancias que
-satisfacen la propiedad (\#pos.) y que no la satisfacen (\#neg.), y el tiempo
-promedio en segundos.}
-\label{table:results}
+\end{tabular}
+\end{center}
+\caption[Resultados de M para *]{Resultados de M para *}
+%\label{table:results}
 \end{table}
 
 \onecolumn
